Agregado la targeta emergente de Company

--- a/src/styles/Component/all.scss
+++ b/src/styles/Component/all.scss
@@ -1,3 +1,4 @@
 @import "./button.scss";
 @import "./header.scss";
-@import "./popUpWindow.scss";
+@import "./popUpWindowFeactures.scss";
+@import "./popUpWindowCompany.scss";
