Ajuste de color de fondo del boton

--- a/src/styles/Component/button.scss
+++ b/src/styles/Component/button.scss
@@ -2,7 +2,7 @@
 
 .left-button-header{
     border: none;
-    background-color: white;
+    background-color: transparent;
     margin-left: 40px;
 }
 
@@ -12,7 +12,7 @@
 
 .login-button{
     border: none;
-    background-color: white;
+    background-color: transparent;
 }
 
 .login-button:hover {
@@ -25,7 +25,7 @@
   margin-left: 30px;
   border-radius: 10px;
   border: 0.5px solid black;
-  background-color: white;
+  background-color: transparent;
 }
  
 .register-button:hover{
