--- a/src/styles/Component/header.scss
+++ b/src/styles/Component/header.scss
@@ -4,6 +4,16 @@
     align-items: center;
     width: 100%;
     height: 50px;
+
+    .feacture-and-arrow-container{
+      display: flex;
+      width: 110px;
+    }
+
+    .company-and-arrow-container{
+      display: flex;
+      width: 110px;
+    }
     
 
     .snap-logo{
@@ -35,7 +45,7 @@
 
     .arrow-vertical{
       display: inline-block;
-      transform: rotate(90deg);
+      transform: rotate(0deg);
       margin-left: 5px;
       font-size: 10px;
     }
