--- a/src/styles/Component/popUpWindowCompany.scss
+++ b/src/styles/Component/popUpWindowCompany.scss
@@ -3,12 +3,14 @@
     display: none;
     flex-direction: column;
     position: absolute;
-    top: 35px;
-    left: 285px;
-    height: 140px;
-    width: 140px;
-    padding: 30px;
-    border-radius: 5px;
+    top: 40px;
+    left: 220px;
+    height: 110px;
+    width: 100px;
+    font-size: 12px;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px -4px $Medium-Gray;
     background: hsl(0deg 21.05% 96.2%);
 
     p{
