--- a/src/styles/Component/popUpWindowFeactures.scss
+++ b/src/styles/Component/popUpWindowFeactures.scss
@@ -4,12 +4,14 @@
     display: none;
     flex-direction: column;
     position: absolute;
-    top: 35px;
-    left: 175px;
+    top: 40px;
+    left: 60px;
     height: 140px;
-    width: 140px;
+    width: 120px;
+    font-size: 12px;
     padding: 20px;
-    border-radius: 5px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px -4px $Medium-Gray;
     background: hsl(0deg 21.05% 96.2%);
   }
 
