--- a/src/styles/Component/button.scss
+++ b/src/styles/Component/button.scss
@@ -33,13 +33,14 @@
 }
 
 .Learn-buttom{
-    width: 100px;
-    height: 30px;
+    padding: 8px;
     color: white;
     background: black;
-    border-radius: 5px;
+    border-radius: 10px;
 }
 
 .Learn-buttom:hover{
     cursor: pointer;
+    background: $Almost-White;
+    color: $Almost-Black;
 }
